--- a/Frontend/ShopNest/src/components/ProductCard/ProductCard.css
+++ b/Frontend/ShopNest/src/components/ProductCard/ProductCard.css
@@ -5,7 +5,8 @@
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    max-width: 300px;
+    width: 300px;
+    cursor: pointer;
     transition: transform 0.3s ease;
   }
   
