Changes in add product and current running changes

--- a/Frontend/ShopNest/src/pages/Login/Signup.css
+++ b/Frontend/ShopNest/src/pages/Login/Signup.css
@@ -1,4 +1,10 @@
 /* Signup.css */
+
+.auth-form-container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 .signup-container {
     max-width: 400px;
     margin: 50px auto;
