--- a/Frontend/ShopNest/src/components/Header/Header.css
+++ b/Frontend/ShopNest/src/components/Header/Header.css
@@ -17,7 +17,7 @@
 .logo {
   font-size: 1.8rem;
   font-weight: 400;
-  font-family: 'Pacifico', cursive;
+  font-family: URW Chancery L, cursive;
   color: white;
   margin: 0;
   cursor: pointer;
@@ -31,12 +31,11 @@
 .header-search {
   flex: 1;
   max-width: 600px;
-  margin: 0 2rem;
 }
 
 .header-search-input {
   width: 100%;
-  padding: 0.8rem 1.2rem;
+  padding: 0.5rem 1.2rem;
   border: 2px solid transparent;
   border-radius: 25px;
   font-size: 1rem;
@@ -113,4 +112,15 @@
   width: 20px;
   height: 20px;
   fill: currentColor;
+}
+
+.order-history-container {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background: white;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  margin-top: 0.5rem;
+  z-index: 1000;
 }
