--- a/Frontend/ShopNest/src/pages/AdminDashboard/AdminDashboard.css
+++ b/Frontend/ShopNest/src/pages/AdminDashboard/AdminDashboard.css
@@ -1,5 +1,5 @@
 .admin-dashboard {
-  padding: 2rem;
+  padding: 1rem;
   background-color: var(--background-color);
   min-height: 100vh;
 }
@@ -12,7 +12,7 @@
 .admin-content {
   display: grid;
   grid-template-columns: 1fr 2fr;
-  gap: 2rem;
+  gap: 1rem;
 }
 
 .add-product-section {
@@ -45,10 +45,10 @@
 
 .form-group input,
 .form-group textarea {
-  padding: 0.75rem;
+  padding: 0.5rem;
   border: 2px solid var(--accent-color);
   border-radius: 8px;
-  font-size: 1rem;
+  font-size: .75rem;
   font-family: inherit;
 }
 
@@ -96,12 +96,15 @@
 }
 
 .products-grid {
+  padding: 0px 30px;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 1rem;
 }
 
 .product-item {
+  display: flex;
+  flex-direction: column;
   background: white;
   border: 1px solid var(--accent-color);
   border-radius: 8px;
@@ -116,6 +119,9 @@
 
 .product-info {
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .product-info h3 {
@@ -159,4 +165,4 @@
   .form-row {
     grid-template-columns: 1fr;
   }
-} 
+}
