--- a/Frontend/ShopNest/src/pages/Login/Login.css
+++ b/Frontend/ShopNest/src/pages/Login/Login.css
@@ -136,11 +136,17 @@
     width: 300px;
     height: 300px;
   }
+  .auth-form-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+  }
   
   .auth-form {
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;
+    gap: .5rem;
     margin-top: 1rem;
   }
   
@@ -169,7 +175,7 @@
   .auth-form {
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;
+    gap: 0.5rem;
     margin-top: 1rem;
   }
   
@@ -240,7 +246,7 @@
   
   .auth-button {
     width: 100%;
-    padding: 1rem;
+    padding: .5rem 1rem;
     background-color: var(--primary-color);
     color: white;
     border: none;
