--- a/Frontend/ShopNest/src/components/ProductList/ProductList.css
+++ b/Frontend/ShopNest/src/components/ProductList/ProductList.css
@@ -1,7 +1,7 @@
 .product-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 0.5rem;
   justify-content: center;
   padding: 20px;
   margin: 0 auto;
