--- a/Frontend/ShopNest/src/components/ProductCard/ProductCard.css
+++ b/Frontend/ShopNest/src/components/ProductCard/ProductCard.css
@@ -10,6 +10,7 @@
   cursor: pointer;
   transition: all 0.3s ease;
   position: relative;
+  min-height :100px;
 }
 
 .product-card:hover {
@@ -19,7 +20,7 @@
 
 .product-card-image {
   width: 100%;
-  height: 150px;
+  height: 250px;
   object-fit: cover;
 }
 
