--- a/Frontend/ShopNest/src/components/ProductModal/ProductModal.css
+++ b/Frontend/ShopNest/src/components/ProductModal/ProductModal.css
@@ -14,10 +14,9 @@
 .product-modal {
   background: white;
   border-radius: 12px;
-  padding: 1.5rem;
   position: relative;
-  width: 90%;
-  max-width: 700px;
+  width: 50%;
+  max-width: 600px;
   max-height: 85vh;
   overflow-y: auto;
   box-shadow: 0 4px 20px rgba(141, 119, 171, 0.2);
@@ -45,7 +44,7 @@
 }
 
 .modal-content {
-  display: flex;
+  /* display: flex; */
   gap: 1.5rem;
 }
 
@@ -56,16 +55,20 @@
 
 .modal-image {
   width: 100%;
-  height: 300px;
+  min-height: 200px;
+  min-width: 230px;
+  margin-bottom: 2px  ;
   object-fit: cover;
   border-radius: 8px;
+  background-color: rgb(216, 216, 216);
 }
 
 .modal-details {
   flex: 1;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.5rem;
+  margin:5px 10px;
 }
 
 .modal-title {
