--- a/Frontend/ShopNest/src/components/ProductModal/ProductModal.css
+++ b/Frontend/ShopNest/src/components/ProductModal/ProductModal.css
@@ -55,9 +55,10 @@
 
 .modal-image {
   width: 100%;
+  max-height: 200px;
   min-height: 200px;
   min-width: 230px;
-  margin-bottom: 2px  ;
+  margin-bottom: 2px;
   object-fit: cover;
   border-radius: 8px;
   background-color: rgb(216, 216, 216);
@@ -68,7 +69,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  margin:5px 10px;
+  margin: 5px 10px;
 }
 
 .modal-title {
@@ -166,8 +167,8 @@
   .modal-image {
     height: 250px;
   }
-  
+
   .product-modal {
     padding: 1rem;
   }
-} 
+}
