--- a/Frontend/ShopNest/src/components/OrderHistory/OrderHistory.css
+++ b/Frontend/ShopNest/src/components/OrderHistory/OrderHistory.css
@@ -5,7 +5,6 @@
   background-color: white;
   border-radius: 8px;
   width: 80%;
-  max-width: 800px;
   max-height: 80vh;
   overflow-y: auto;
   padding: 20px;
@@ -24,12 +23,23 @@
   font-size: 24px;
   cursor: pointer;
 }
+.order-history-content{
+  display: flex;
+  flex-direction: column;
+  gap:1rem;
+}
 
 .order-item {
   border: 1px solid #ddd;
-  border-radius: 4px;
+  border-radius: 5px;
   margin-bottom: 15px;
-  padding: 15px;
+  padding: 20px;
+  box-shadow: 1px 2px 1px 1px rgba(227, 227, 227, 0.484);
+
+  &:hover{
+    background-color: #e7e1fff1;
+    box-shadow: 1px 2px 1px 1px rgba(189, 188, 188, 0.382);
+  }
 }
 
 .order-header {
