--- a/Frontend/ShopNest/src/components/ProductList/ProductList.css
+++ b/Frontend/ShopNest/src/components/ProductList/ProductList.css
@@ -1,9 +1,9 @@
 .product-list {
   display: flex;
-  flex-wrap: wrap;
+ 
   gap: 0.5rem;
-  justify-content: center;
-  padding: 20px;
+  justify-content: space-around;
+  padding: 20px ;
   margin: 0 auto;
   max-width: 1200px;
 }
