--- a/Frontend/ShopNest/src/pages/Dashboard/Dashboard.css
+++ b/Frontend/ShopNest/src/pages/Dashboard/Dashboard.css
@@ -26,7 +26,7 @@
   padding: 20px ;
   border-radius: 15px;
   box-shadow: 0 4px 20px rgba(141, 119, 171, 0.2);
-  width: 70%;
+  min-width: 500px;
   max-width: 1000px;
   overflow-y: auto;
   position: relative;
