--- a/Frontend/ShopNest/src/pages/AdminDashboard/AdminDashboard.css
+++ b/Frontend/ShopNest/src/pages/AdminDashboard/AdminDashboard.css
@@ -65,6 +65,11 @@
   gap: 1rem;
 }
 
+
+.image-preview{
+  margin:1rem;
+  
+}
 .submit-btn {
   background-color: var(--primary-color);
   color: white;
